feat: add account endpoints
